Поддержка таблицы в Jasper  Report: II

--- a/src/main/resources/templates/chartspage.html
+++ b/src/main/resources/templates/chartspage.html
@@ -44,6 +44,16 @@
 
             </div>
         </div>
+
+        <form class="form-horizontal" role="form" action="/charts" method="post">
+            <div class="form-group">
+                <div class="col-sm-offset-3 col-sm-9">
+                    <div class="pull-right">
+                        <button type="submit" class="btn btn-primary">Сформировать PDF</button>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
 
 
