--- a/src/main/resources/templates/chartspage.html
+++ b/src/main/resources/templates/chartspage.html
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <form class="form-horizontal" role="form" action="/charts" method="post">
+        <form class="form-horizontal" role="form" action="/charts" method="post" target="_blank">
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
                     <div class="pull-right">
