--- a/src/main/resources/templates/invoicepage.html
+++ b/src/main/resources/templates/invoicepage.html
@@ -70,7 +70,7 @@
         <div class="row">
             <!--<div class="col-md-4 col-md-offset-4">-->
             <div class="col-md-6 col-md-offset-3">
-                <form class="form-horizontal" role="form" action="#" th:action="@{/invoice}" th:object="${invoice}" method="post" >
+                <form class="form-horizontal" role="form" action="#" th:action="@{/invoice}" th:object="${invoice}" method="post" target="_blank">
                     <!--<form class="form-horizontal" role="form"  action="/order" method="post" modelAttribute="dtoOrder">-->
                     <fieldset>
 
