--- a/src/main/resources/templates/mainpage.html
+++ b/src/main/resources/templates/mainpage.html
@@ -46,7 +46,7 @@
     <div class="row">
         <!--<div class="col-md-4 col-md-offset-4">-->
         <div class="col-md-6 col-md-offset-3">
-            <form class="form-horizontal" role="form" action="#" th:action="@{/order}" th:object="${order}" method="post" >
+            <form class="form-horizontal" role="form" action="#" th:action="@{/order}" th:object="${order}" method="post" target="_blank">
             <!--<form class="form-horizontal" role="form"  action="/order" method="post" modelAttribute="dtoOrder">-->
                 <fieldset>
 
