--- a/src/main/resources/templates/invoicepage.html
+++ b/src/main/resources/templates/invoicepage.html
@@ -81,7 +81,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Номер:</label>
                             <div class="col-md-9">
-                                <input type="text" id="documentNumber" placeholder="Номер счета" class="form-control" th:field="*{documentNumber}"  />
+                                <input type="text" id="documentNumber" placeholder="Номер счета" class="form-control" th:field="*{documentNumber}" readonly="readonly"/>
                             </div>
                         </div>
 
@@ -89,14 +89,14 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">ИНН:</label>
                             <div class="col-md-4">
-                                <input type="text" id="numberINN" placeholder="ИНН" class="form-control" th:field="*{numberINN}" />
+                                <input type="text" id="numberINN" placeholder="ИНН" class="form-control" th:field="*{numberINN}" readonly="readonly"/>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="col-md-3 control-label" >КПП:</label>
                             <div class="col-md-4">
-                                <input type="text" id="numberKPP" placeholder="КПП" class="form-control" th:field="*{numberKPP}" />
+                                <input type="text" id="numberKPP" placeholder="КПП" class="form-control" th:field="*{numberKPP}" readonly="readonly"/>
                             </div>
                         </div>
 
@@ -105,7 +105,7 @@
                             <label class="col-md-3 control-label">Получатель средств:</label>
                             <div class="col-md-9">
                             <textarea class="form-control" id="recipientName" name="message" placeholder="Наименование получателя"
-                                      rows="3" th:field="*{recipientName}" ></textarea>
+                                      rows="3" th:field="*{recipientName}" readonly="readonly"></textarea>
                             </div>
                         </div>
 
@@ -114,7 +114,7 @@
                             <label class="col-md-3 control-label">Банк получателя:</label>
                             <div class="col-md-9">
                             <textarea class="form-control" id="recipientNameBank" name="message" placeholder="Наименование банка получателя"
-                                      rows="3" th:field="*{recipientNameBank}" ></textarea>
+                                      rows="3" th:field="*{recipientNameBank}" readonly="readonly"></textarea>
                             </div>
                         </div>
 
@@ -122,7 +122,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">БИК:</label>
                             <div class="col-md-9">
-                                <input type="text" placeholder="БИК" id="recipientBIKBank" class="form-control" th:field="*{recipientBIKBank}"/>
+                                <input type="text" placeholder="БИК" id="recipientBIKBank" class="form-control" th:field="*{recipientBIKBank}" readonly="readonly"/>
                             </div>
                         </div>
 
@@ -130,7 +130,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Сч. №:</label>
                             <div class="col-md-9">
-                                <input type="text" id="recipientBankAccount" class="form-control" th:field="*{recipientBankAccount}" />
+                                <input type="text" id="recipientBankAccount" class="form-control" th:field="*{recipientBankAccount}" readonly="readonly"/>
                             </div>
                         </div>
 
@@ -138,7 +138,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Сч. № (2):</label>
                             <div class="col-md-9">
-                                <input type="text" id="recipientBankAccount2" class="form-control" th:field="*{recipientBankAccount2}" />
+                                <input type="text" id="recipientBankAccount2" class="form-control" th:field="*{recipientBankAccount2}" readonly="readonly"/>
                             </div>
                         </div>
 
@@ -148,7 +148,7 @@
                             <label class="col-md-3 control-label">Поставщик:</label>
                             <div class="col-md-9">
                             <textarea class="form-control" id="providerName" name="message" placeholder="Поставщик описание"
-                                      rows="3" th:field="*{providerName}" ></textarea>
+                                      rows="3" th:field="*{providerName}" readonly="readonly"></textarea>
                             </div>
                         </div>
 
@@ -157,7 +157,7 @@
                             <label class="col-md-3 control-label">Покупатель:</label>
                             <div class="col-md-9">
                             <textarea class="form-control" id="buyerName" name="message" placeholder="Покупатель описание"
-                                      rows="3" th:field="*{buyerName}" ></textarea>
+                                      rows="3" th:field="*{buyerName}" readonly="readonly"></textarea>
                             </div>
                         </div>
 
@@ -165,7 +165,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Директор:</label>
                             <div class="col-md-9">
-                                <input type="text" id="directorName" class="form-control" th:field="*{directorName}" />
+                                <input type="text" id="directorName" class="form-control" th:field="*{directorName}" readonly="readonly"/>
                             </div>
                         </div>
 
@@ -173,7 +173,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Бухгалтер:</label>
                             <div class="col-md-9">
-                                <input type="text" id="accounterName" class="form-control" th:field="*{accounterName}" />
+                                <input type="text" id="accounterName" class="form-control" th:field="*{accounterName}" readonly="readonly"/>
                             </div>
                         </div>
 
@@ -181,7 +181,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Общая сумма:</label>
                             <div class="col-md-9">
-                                <input type="text" id="totalSum" class="form-control" th:field="*{totalSum}" />
+                                <input type="text" id="totalSum" class="form-control" th:field="*{totalSum}" readonly="readonly"/>
                             </div>
                         </div>
                         <div class="form-group">
